--- a/index.html
+++ b/index.html
@@ -259,10 +259,12 @@
                     <hr class="primary">
                     <p>You can write me an email and I will get back to you as soon as possible!</p>
                 </div>
+
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>648-85-64-70</p>
+                    <p>XXX-XX-XX-XX</p>
                 </div>
+
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="mailto:kgoberna@gmail.com">info@enriquegoberna.com</a></p>
