--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 <p> Nacido y crecido en Vigo (Galicia, España). Amante de la tecnología, la música y el deporte, los tres pilares fundamentales de mi vida. 
                 Me inicié en la música a los 8 años de la mano de mi padre y cursé los estudios de Grado Elemental (2002 - 2006) y Grado Profesional (2008 - 2012) en el Conservatorio Profesional de Música de Vigo. 
                 Pese a mi faceta artística siempre tuve claro que lo mío era la tecnología y ya pensando en ello estudié el bachillerato científico-tecnologico (2010 - 2012) en el IES Santa Irene de Vigo. 
-                En el año 2012 inicié mis estudios de Ingeniería Informática en la FIC (Universidade da Coruña) donde continúo actualmente. Estudié 6 meses en la Università degli Studi di Milano, en Milán, como estudiante de intercambio Erasmus de septiembre de 2014 a febrero de 2015.</p>
+                En el año 2012 inicié mis estudios de Ingeniería Informática en la FIC (Universidade da Coruña) donde continúo actualmente. Estudié 6 meses en la Università degli Studi di Milano, en Milán, como estudiante de intercambio Erasmus de septiembre de 2014 a febrero de 2015.</p>			
+				<p> Actualmente estoy realizando prácticas de empresa en Telecon Galicia (A Coruña).  </p>
+				<p> Fitness y Powerlifting como forma de vida. </p>
             </div>
         </div>
     </header>
