--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <h1>Enrique Goberna García</h1>
                 <hr>
                 <p>Computer Engineering student at University of A Coruña</p>
+                <p>Work in progress</p>
 <!--
                 <p> Nacido y crecido en Vigo (Galicia, España). Amante de la tecnología, la música y el deporte, los tres pilares fundamentales de mi vida. 
                 Me inicié en la música a los 8 años de la mano de mi padre y cursé los estudios de Grado Elemental (2002 - 2006) y Grado Profesional (2008 - 2012) en el Conservatorio Profesional de Música de Vigo. 
