Updating personal web site

--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-<!--
+
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
--->
+                    </li> -->
+
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -78,13 +78,16 @@
             <div class="header-content-inner">
                 <h1>Enrique Goberna García</h1>
                 <hr>
-                <p>Computer Engineering student at University of A Coruña</p>
-                <p>Work in progress</p>
+                <p>Welcome to my personal web page. I'm Enrique, a software engineer at Bionix Technologies. My work is focused in backend software development in SaaS systems for supply chain data centralization and BI metrics in the retail sector and biosanitary industry using RFID technology.</p>
+
+                <a href='https://scrummanager.com/website/c/profile/member.php?id=29633'><img alt='Scrum Manager Experto' src='https://scrummanager.com/website/img/experto-es.png'></a>
+                <a href='https://scrummanager.com/website/c/profile/member.php?id=29633'><img alt='Scrum Master' src='https://scrummanager.com/intranet/files/credential/6/smalllogo.png'></a>
+                <!-- <p>Work in progress</p> -->
 <!--
-                <p> Nacido y crecido en Vigo (Galicia, España). Amante de la tecnología, la música y el deporte, los tres pilares fundamentales de mi vida. 
-                Me inicié en la música a los 8 años de la mano de mi padre y cursé los estudios de Grado Elemental (2002 - 2006) y Grado Profesional (2008 - 2012) en el Conservatorio Profesional de Música de Vigo. 
-                Pese a mi faceta artística siempre tuve claro que lo mío era la tecnología y ya pensando en ello estudié el bachillerato científico-tecnologico (2010 - 2012) en el IES Santa Irene de Vigo. 
-                En el año 2012 inicié mis estudios de Ingeniería Informática en la FIC (Universidade da Coruña) donde continúo actualmente. Estudié 6 meses en la Università degli Studi di Milano, en Milán, como estudiante de intercambio Erasmus de septiembre de 2014 a febrero de 2015.</p>			
+                <p> Nacido y crecido en Vigo (Galicia, España). Amante de la tecnología, la música y el deporte, los tres pilares fundamentales de mi vida.
+                Me inicié en la música a los 8 años de la mano de mi padre y cursé los estudios de Grado Elemental (2002 - 2006) y Grado Profesional (2008 - 2012) en el Conservatorio Profesional de Música de Vigo.
+                Pese a mi faceta artística siempre tuve claro que lo mío era la tecnología y ya pensando en ello estudié el bachillerato científico-tecnologico (2010 - 2012) en el IES Santa Irene de Vigo.
+                En el año 2012 inicié mis estudios de Ingeniería Informática en la FIC (Universidade da Coruña) donde continúo actualmente. Estudié 6 meses en la Università degli Studi di Milano, en Milán, como estudiante de intercambio Erasmus de septiembre de 2014 a febrero de 2015.</p>
 				<p> Actualmente estoy realizando prácticas de empresa en Telecon Galicia (A Coruña).  </p>
 				<p> Fitness y Powerlifting como forma de vida. </p>
 -->
@@ -92,20 +95,20 @@
         </div>
     </header>
 
-<!--
+
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">About me</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <p class="text-faded">Born in Vigo (Galicia, Spain) in 1994. Loving music, lifting and technology. I studied Bachelor and Master in Computer Engineering at University of A Coruña.</p>
+                    <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
                 </div>
             </div>
         </div>
     </section>
--->
+
 
 <!--
     <section id="services">
@@ -255,9 +258,9 @@
                 <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
-    </aside>
-    
--->
+    </aside> -->
+
+
 
     <section id="contact">
         <div class="container">
@@ -268,12 +271,12 @@
                     <p>You can write me an email and I will get back to you as soon as possible!</p>
                 </div>
 
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
                     <p>XXX-XX-XX-XX</p>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p><a href="mailto:kgoberna@gmail.com">info@enriquegoberna.com</a></p>
                 </div>
